add one-liners